also handle the cond format code for xlsb the new way, fdo#53424

Change-Id: I8d54e5fee29952635c3d4c2d5a12203668e2ff28